--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -2,3 +2,13 @@
 .nav.nav_black{background-color: #000;}
 .nav .nav_logo{width: 90px;}
 .nav .nav_avatar{width: 30px;object-fit: contain;}
+.nav_input {
+    position: fixed;
+    left: 50%;
+    transform: translate(-50%, 0);
+    background-color: rgba(0, 0, 0, 0.582);
+    border-radius: 5px;
+    color: white;
+    padding: 5px;
+    border: none;
+}
